fix bug execute computer job (#1120)
* fix bug execute computer job

Change-Id: I50c8830c3536c0a3f73004e7568902579a09025b

* improve

Change-Id: If1abac13df0e041e24289a2bec8f032a1ca42c70

* improve

Change-Id: I64123152b553523af3c50499050d7eb29762c3d9

* add computer home env

Change-Id: I2fc5abbab34f188527e2daf277e3c9a69efe29a2

* improve

Change-Id: Iddbcb765cd7a3bef44c7ff9a4a4c3066fc4244da